Fix three circular definition bugs
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICF9B4
Signed-off-by: 梁家熙 <liangjiaxi2@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1496,5 +1496,17 @@ semantic:
   message: "Class field '{}' defined by the parent class is not accessible in the child class via super."
 
 - name: INTERFACE_EXTENDS_CLASS
-  id: 373
+  id: 378
   message: "Interfaces cannot extend classes, only other interfaces."
+
+- name: CYCLIC_TYPE_OF
+  id: 379
+  message: "Circular type of reference"
+
+- name: CYCLIC_CLASS_SUPER_TYPE
+  id: 380
+  message: "Class's super type is itself"
+
+- name: CYCLIC_CALLEE
+  id: 381
+  message: "Circular call function"
