Optimize substitutions, generic bridges, ASTNode
* Compute candidate generic methods in advance
* Split Substitution and ArenaSubstitution of different lifespan
* Reduce ASTNode class size

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICFJRW
Signed-off-by: Vsevolod Pukhov <pukhov.vsevolod1@huawei.com>

--- a/ets2panda/public/cppToCTypes.yaml
+++ b/ets2panda/public/cppToCTypes.yaml
@@ -2789,7 +2789,7 @@ change_types:
       min_ptr_depth: 1
     new_args:
     - type:
-        name: "ArenaMap"
+        name: "Map"
         ptr_depth: '|es2panda_arg.type.ptr_depth_int|'
         template_args:
         - type:
