modify include paths to libpandafile
Issue: #ICFWS0

Signed-off-by: Panferov Ivan <panferov.ivan@huawei-partners.com>

--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -46,7 +46,7 @@ shared_library("ts_bindings") {
     "../:libes2panda_public_config",
     "../:libes2panda_config",
     "$ark_root/libpandabase:arkbase_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
+    "$ark_root/libarkfile:arkfile_public_config",
   ]
 
   deps = [
@@ -207,7 +207,7 @@ shared_library("public") {
     "../:libes2panda_public_config",
     "../:libes2panda_config",
     "$ark_root/libpandabase:arkbase_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
+    "$ark_root/libarkfile:arkfile_public_config",
   ]
 
   include_dirs = [
