--- a/ets2panda/aot/BUILD.gn
+++ b/ets2panda/aot/BUILD.gn
@@ -44,7 +44,7 @@ ohos_executable("ets2panda") {
   if (ark_standalone_build || ark_static_standalone_build) {
     configs += [
       "$ark_root/assembler:arkassembler_public_config",
-      "$ark_root/libpandafile:arkfile_public_config",
+      "$ark_root/libarkfile:arkfile_public_config",
       "$ark_root/libpandabase:arkbase_public_config",
       "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
       "$ark_root/runtime:arkruntime_public_config",
@@ -65,7 +65,7 @@ ohos_executable("ets2panda") {
     deps += [
       "$ark_root/bytecode_optimizer:libarktsbytecodeopt_package",
       "$ark_root/libpandabase:libarktsbase_package",
-      "$ark_root/libpandafile:libarktsfile_package",
+      "$ark_root/libarkfile:libarktsfile_package",
     ]
   }
 
