--- a/ets2panda/declgen_ets2ts/BUILD.gn
+++ b/ets2panda/declgen_ets2ts/BUILD.gn
@@ -39,7 +39,7 @@ ohos_executable("declgen_ets2ts") {
   configs += [
     "$ark_es2panda_root:libes2panda_public_config",
     "$ark_root/assembler:arkassembler_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
+    "$ark_root/libarkfile:arkfile_public_config",
     "$ark_root/libpandabase:arkbase_public_config",
     "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
     "$ark_root/compiler:arkcompiler_public_config",
