--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -120,7 +120,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "../:libes2panda_public_config",
     "../:libes2panda_config",
     "$ark_root/libpandabase:arkbase_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
+    "$ark_root/libarkfile:arkfile_public_config",
     ":libes2panda_lsp_config",
   ]
 
