Add diagnostic for comma outside for loop
Fixes #24663 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICGGON

Change-Id: I3aa97c9c6812c0f8cc9512f1db7840419ca5e71c
Signed-off-by: Gabor Aron Takacs <gabor.takacs@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -209,6 +209,10 @@ syntax:
   id: 308
   message: "Ambient module declaration is not supported!"
 
+- name: ERROR_ARKTS_NO_COMMA_OUTSIDE_LOOPS
+  id: 133681
+  message: "Comma operator is supported only in 'for' loops."
+
 - name: ERROR_ARKTS_NO_DEBUGGER_STATEMENT
   id: 299
   message: "Debugger statement is not supported!"
