--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -306,6 +306,7 @@ libes2panda_sources = [
   "ir/brokenTypeNode.cpp",
   "ir/ets/etsClassLiteral.cpp",
   "ir/ets/etsFunctionType.cpp",
+  "ir/ets/etsIntrinsicNode.cpp",
   "ir/ets/etsKeyofType.cpp",
   "ir/ets/etsModule.cpp",
   "ir/ets/etsNeverType.cpp",
@@ -541,6 +542,7 @@ HEADERS_TO_BE_PARSED = [
   "ir/statement.h",
   "ir/irnode.h",
   "checker/types/typeRelation.h",
+  "ir/ets/etsIntrinsicNode.h",
   "ir/visitor/AstVisitor.h",
   "ir/statements/classDeclaration.h",
   "ir/base/tsMethodSignature.h",
@@ -819,6 +821,7 @@ ES2PANDA_API_GENERATED = [
   "$LIBGEN_DIR/gen/headers/ir/visitor/IterateAstVisitor.yaml",
   "$LIBGEN_DIR/gen/headers/ir/statements/functionDeclaration.yaml",
   "$LIBGEN_DIR/gen/headers/ir/ets/etsTypeReference.yaml",
+  "$LIBGEN_DIR/gen/headers/ir/ets/etsIntrinsicNode.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/ts/tupleType.yaml",
   "$LIBGEN_DIR/gen/headers/ir/ts/tsTypeReference.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/ts/functionType.yaml",
