--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -407,6 +407,7 @@ semantic:
 - name: ITERATOR_TYPE_ABSENT
   id: 99
   message: "Cannot obtain iterator type in 'for-of' statement."
+
 - name: OBJ_LIT_PROPERTY_REDECLARATION
   id: 100
   message: "An object literal cannot have multiple properties with the same name."
@@ -1494,3 +1495,7 @@ semantic:
 - name: INVALID_LAMBDA_PARAMETER
   id: 395
   message: "Invalid lambda parameter. Expected: 'identifier(: type)?', 'identifier?(: type)?' or '...identifier(: type)?'."
+
+- name: TYPEOF_IN_ANNOTATION
+  id: 382
+  message: "'typeof' is not allowed in type annotations."
