--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -230,6 +230,10 @@ syntax:
   id: 81515
   message: "Constructor signatures are not supported in interfaces, use methods instead!"
 
+- name: ERROR_ARKTS_NO_OBJ_LITERAL_TO_DECL_TYPE
+  id: 177354
+  message: "Using object literals to declare types in place is not supported. Please declare types and interfaces explicitly!"
+
 - name: ERROR_ARKTS_NO_PRIVATE_IDENTIFIERS
   id: 298
   message: "Use 'private' keyword to declare an identifier as private."
