--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -168,9 +168,9 @@ syntax:
   id: 39
   message: "A try statement should contain either finally clause or at least one catch clause."
 
-- name: ILLEGAL_START_STRUCT
+- name: ILLEGAL_START_STRUCT_CLASS
   id: 40
-  message: "Illegal start of STRUCT expression."
+  message: "Illegal start of {} expression."
 
 - name: ONLY_EXPORT_CLASS_OR_INTERFACE
   id: 41
