--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -109,6 +109,10 @@ syntax:
   id: 217
   message: "A binding pattern parameter cannot be optional in an implementation signature."
 
+- name: CALL_SIG_IN_OBJECT
+  id: 103145
+  message: "{} signatures in object types are not supported. Use '$_invoke' method instead."
+
 - name: CANNOT_EXPORT_DIFFERENT_OBJECTS_WITH_SAME_NAME
   id: 344
   message: "Cannot export two different names with the same export alias name '{}'."
