--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -218,6 +218,12 @@ defines:
   - name: 'InterfaceObjectLiteral'
     ref: INTERFACE_OBJ_LITERAL
     comment: ETS annotation type
+  - name: 'ETSGLOBAL.<cctor>:void;'
+    ref: UNUSED_ETSGLOBAL_CTOR
+  - name: 'ETSGLOBAL._$init$_:void;'
+    ref: UNUSED_ETSGLOBAL_INIT
+  - name: 'ETSGLOBAL.main:void;'
+    ref: UNUSED_ETSGLOBAL_MAIN
 
 packages:
   - name: 'std.core'
