--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -238,6 +238,12 @@ defines:
     comment: ETS annotation type
   - name: 'use static'
     ref: STATIC_PROGRAM_FLAG
+  - name: 'ETSGLOBAL.<cctor>:void;'
+    ref: UNUSED_ETSGLOBAL_CTOR
+  - name: 'ETSGLOBAL._$init$_:void;'
+    ref: UNUSED_ETSGLOBAL_INIT
+  - name: 'ETSGLOBAL.main:void;'
+    ref: UNUSED_ETSGLOBAL_MAIN
 
 packages:
   - name: 'std.core'
