--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -379,3 +379,8 @@ options:
   type: bool
   default: false
   description: Dump es2panda performance metrics
+
+- name: simultaneous 
+  type: bool
+  default: false
+  description: compile all the files to abc in once.
