--- a/ets2panda/aot/BUILD.gn
+++ b/ets2panda/aot/BUILD.gn
@@ -40,14 +40,20 @@ ohos_executable("ets2panda") {
       "//build/config/components/runtime_core/static_core:ark_common_config",
     ]
   }
+  
+  if (ark_standalone_build || ark_static_standalone_build) {
+    configs += [
+      "$ark_root/assembler:arkassembler_public_config",
+      "$ark_root/libpandafile:arkfile_public_config",
+      "$ark_root/libpandabase:arkbase_public_config",
+      "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
+      "$ark_root/runtime:arkruntime_public_config",
+      "$ark_root/compiler:arkcompiler_public_config",
+    ]
+  }
+
   configs += [
-    "$ark_root/assembler:arkassembler_public_config",
     "$ark_es2panda_root:libes2panda_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
-    "$ark_root/libpandabase:arkbase_public_config",
-    "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
-    "$ark_root/compiler:arkcompiler_public_config",
-    "$ark_root/runtime:arkruntime_public_config",
   ]
 
   deps = [
@@ -71,6 +77,19 @@ ohos_executable("ets2panda") {
     "runtime_core:libarktsfile_package",
     sdk_libc_secshared_dep,
   ]
+
+  if (!(ark_standalone_build || ark_static_standalone_build)) {
+    external_deps += [
+      "runtime_core:assembler_headers",
+      "runtime_core:bytecode_optimizer_headers",
+      "runtime_core:libpandabase_headers",
+      "runtime_core:libpandafile_headers",
+      "runtime_core:runtime_gen_headers",
+      "runtime_core:runtime_headers",
+      "runtime_core:compiler_headers",
+      "runtime_core:verification_headers",
+    ]
+  }
 
   if (defined(ohos_indep_compiler_enable) && ohos_indep_compiler_enable) {
     external_deps += [ "icu:shared_icuuc" ]
