--- a/ets2panda/driver/dependency_analyzer/BUILD.gn
+++ b/ets2panda/driver/dependency_analyzer/BUILD.gn
@@ -11,8 +11,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-import("//arkcompiler/runtime_core/static_core/ark_config.gni")
 import("//build/ohos.gni")
+if ((defined(ark_standalone_build) && ark_standalone_build) ||
+    (defined(ark_static_standalone_build) && ark_static_standalone_build)) {
+  import("//arkcompiler/runtime_core/static_core/ark_config.gni")
+} else {
+  import(
+      "//build/config/components/runtime_core/static_core/ark_common_config.gni")
+}
 
 ohos_executable("dependency_analyzer") {
   sources = [
@@ -20,16 +26,16 @@ ohos_executable("dependency_analyzer") {
     "main.cpp",
   ]
 
-  configs = [
-    "$ark_root:ark_config",
-    "$ark_root/assembler:arkassembler_public_config",
-    "$ark_es2panda_root:libes2panda_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
-    "$ark_root/libpandabase:arkbase_public_config",
-    "$ark_root/bytecode_optimizer:bytecodeopt_public_config",
-    "$ark_root/compiler:arkcompiler_public_config",
-    "$ark_root/runtime:arkruntime_public_config",
-  ]
+  include_dirs = [ "$target_gen_dir" ]
+  if ((defined(ark_standalone_build) && ark_standalone_build) ||
+      (defined(ark_static_standalone_build) && ark_static_standalone_build)) {
+    configs = [ "$ark_root:ark_config" ]
+  } else {
+    configs = [
+      "//build/config/components/runtime_core/static_core:ark_common_config",
+    ]
+  }
+  configs += [ "$ark_es2panda_root:libes2panda_public_config" ]
 
   deps = [
     "$ark_es2panda_root:libes2panda_frontend_static",
