Fix method assignment crash
Modified the ETS Analyzer to recognize invalid method assignments and throw error instead of crashing

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICHTZ0
Internal issue: #26792

Change-Id: Ida8bfa8493ee5e70ff28254b22306c4ea76c5af8
Signed-off-by: Istvan Romai <istvan.romai@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1557,5 +1557,9 @@ semantic:
   message: "overload declaration cannot contain abstract methods."
   
 - name: INVALID_RECORD_PROPERTY
-  id: 383
+  id: 393
   message: "Invalid record property"
+
+- name: METHOD_ASSIGNMENT
+  id: 394
+  message: "Class methods cannot be overwritten."
