Fix the timeout issue of the use case
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICHVLY
Signed-off-by: lijunru <lijunru9@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -87,6 +87,10 @@ ets2panda_add_gtest(lsp_quick_info_api_test CPP_SOURCES
     quick_info_test.cpp
 )
 
+ets2panda_add_gtest(lsp_quick_info_api_test_1 CPP_SOURCES
+    quick_info_test_1.cpp
+)
+
 ets2panda_add_gtest(lsp_api_completions_entry_details_test CPP_SOURCES
     get_completions_entry_details.cpp
 )
@@ -148,6 +152,10 @@ ets2panda_add_gtest(lsp_api_test_suggestion_diagnostics CPP_SOURCES
     suggestion_diagnostics_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_test_suggestion_diagnostics_1 CPP_SOURCES
+    suggestion_diagnostics_test_1.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_get_class_property_info CPP_SOURCES
     get_class_property_info_test.cpp
 )
@@ -162,6 +170,10 @@ ets2panda_add_gtest(lsp_api_completions_test CPP_SOURCES
 
 ets2panda_add_gtest(lsp_api_ui_suggest_test CPP_SOURCES
     code_fix/ui_plugin_suggest.cpp
+)
+
+ets2panda_add_gtest(lsp_api_completions_test_1 CPP_SOURCES
+    get_completions_1.cpp
 )
 
 ets2panda_add_gtest(lsp_api_test_get_class_hierarchy_info CPP_SOURCES
@@ -231,6 +243,11 @@ ets2panda_add_gtest(lsp_api_test_todo_comments CPP_SOURCES
 ets2panda_add_gtest(lsp_api_test_navigate_to CPP_SOURCES
     navigate_to_test.cpp
 )
+
+ets2panda_add_gtest(lsp_api_test_navigate_to_1 CPP_SOURCES
+    navigate_to_test_1.cpp
+)
+
 ets2panda_add_gtest(lsp_api_test_code_fix_registration CPP_SOURCES
     code_fix_registration_test.cpp
 )
