CTE if more indexer declaration is provided
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICHJ5O

Reason:

Crash if more than one index signatures were declared

Description:

Added extra checks to parsing index signatures to throw CTE in time.

Fixes internal issue: #26925

Signed-off-by: Haag Boglarka <boglarka.haag@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1307,3 +1307,7 @@ syntax:
 - name: FUNCTION_OVERLOADED_NAME_MUST_QUALIFIED_NAME
   id: 325
   message: "The overloaded method name in function overload declaration must be qualified name."
+
+- name: MORE_INDEXER
+  id: 326
+  message: "Only one index signature can exist in a class"
