Fix es2panda abort
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICIOJA

Signed-off-by: tengtengh <tenghao9@huawei.com>

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1563,3 +1563,7 @@ semantic:
 - name: METHOD_ASSIGNMENT
   id: 394
   message: "Class methods cannot be overwritten."
+
+- name: INVALID_LAMBDA_PARAMETER
+  id: 395
+  message: "Invalid lambda parameter. Expected: 'identifier(: type)?', 'identifier?(: type)?' or '...identifier(: type)?'."
