Fix es2panda abort
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICIOJA

Signed-off-by: tengtengh <tenghao9@huawei.com>
Change-Id: I91930a3878a2bea32f3af5ed04ef45a33f7fcbc9

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1490,3 +1490,7 @@ semantic:
 - name: CYCLIC_CALLEE
   id: 381
   message: "Circular call function"
+
+- name: INVALID_LAMBDA_PARAMETER
+  id: 395
+  message: "Invalid lambda parameter. Expected: 'identifier(: type)?', 'identifier?(: type)?' or '...identifier(: type)?'."
