--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1494,3 +1494,55 @@ semantic:
 - name: CYCLIC_CALLEE
   id: 381
   message: "Circular call function"
+
+- name: DYMANIC_INIT_WITH_OBJEXPR
+  id: 382
+  message: "Dymanic Type {} cannot be initialize with an object expression"
+
+- name: OVERLOAD_NAME_MUST_BE_IDENTIFIER
+  id: 383
+  message: "The name of overload declaration should be an identifier."
+
+- name: OVERLOADED_NAME_MUST_FUNCTION
+  id: 384
+  message: "overloaded name must refer to an accessible method."
+
+- name: DUPLICATE_OVERLOADED_NAME
+  id: 385
+  message: "Duplicate overloaded method."
+
+- name: OVERLOAD_SAME_ACCESS_MODIFIERS
+  id: 386
+  message: "Overload alias and overloaded method name must have exactly the same modifiers (public, private, protected)."
+
+- name: OVERLOAD_SAME_ACCESS_MODIFIERS_STATIC_ASYNC
+  id: 387
+  message: "Overload alias and overloaded method name must have exactly the same modifiers (static, async)."
+
+- name: OVERLOAD_MUST_BOTH_CONSTRUCT
+  id: 388
+  message: "The overload alias and the overloaded method must either both be constructors or both be non-constructors."
+
+- name: OVERLOADED_NAME_REFER_TO_OVERLOAD_FUNCTION
+  id: 389
+  message: "The overloaded name '{}' can't refer to a function with overload signatures."
+
+- name: OVERLOADED_NAME_MUST_ALSO_EXPORTED
+  id: 390
+  message: "Overload alias is exported, then overload functions must also be exported."
+
+- name: OVERLOADED_UNION_CALL
+  id: 391
+  message: "Overload declaration cannot be called by union."
+
+- name: OVERLOAD_MODIFIERS_ABSTRACT
+  id: 392
+  message: "overload declaration cannot contain abstract methods."
+ 
+- name: INVALID_RECORD_PROPERTY
+  id: 393
+  message: "Invalid record property"
+
+- name: INVALID_LAMBDA_PARAMETER
+  id: 394
+  message: "Invalid lambda parameter. Expected: 'identifier(: type)?', 'identifier?(: type)?' or '...identifier(: type)?'."
