cherry-pick !6565 from 0328 to 0603
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICLR6R

Reason:
The startPostion and endPosition of decorator are unexpected.

Description:
Modify the range setting of the AnnotationUsage.

Test:
ninja tests pass

Signed-off-by: anjiaqi <anjiaqi4@huawei.com>

--- a/ets2panda/test/unit/plugin/CMakeLists.txt
+++ b/ets2panda/test/unit/plugin/CMakeLists.txt
@@ -111,6 +111,7 @@ set(PLUGIN_TESTS
     "plugin_proceed_to_state_test_interface_duplicate_setter compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_test_case_block_dump compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_function_dump compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "pugin_proceed_to_state_annotationUsage_source_range_access compile.ets ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
 )
 
 set(RUNTIME_ARGUMENTS
