fix keyword readonly/declare/typeof
Fix keyword readonly/declare/typeof.
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/ICH1W3
Signed-off-by: fcc <changchun.fan@qq.com>

--- a/ets2panda/lexer/scripts/keywords.yaml
+++ b/ets2panda/lexer/scripts/keywords.yaml
@@ -536,8 +536,8 @@ keywords:
 
   - name: 'typeof'
     token: KEYW_TYPEOF
-    keyword: [js, ts]
-    keyword_like: [ets]
+    keyword: [js, ts, ets]
+    keyword_like: []
     flags: [unary]
 
   - name: 'u8'
