Implement union type
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/ICIYJL

Revert "Revert Union Type"
This reverts commit 032615c5baa080fd5165fb07473288d487a0997b.

UnionType checkcast/isinstance codegen; null type
FE support implementing union class in runtime
- Patch checkcast/isinstance codegen for Union types;
- Emit unions with null as {...|null} instead of simple 'object'
- Emit null type as std.core.Null

Signed-off-by: Anna Antipina <antipina.anna1@huawei.com>
Signed-off-by: Lyupa Anastasia <lyupa.anastasia@huawei.com>
Signed-off-by: groshevmaksim <groshev.maksim@h-partners.com>

Change-Id: I5b659865f3cbe9bb3dc411423bb8eb9c989ec8c1

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -152,6 +152,8 @@ defines:
     ref: UNDEFINED
   - name: 'null'
     ref: NULL_LITERAL
+  - name: 'std.core.Null'
+    ref: NULL_ASSEMBLY_TYPE
   - name: 'Readonly'
     ref: READONLY_TYPE_NAME
   - name: 'Partial'
@@ -788,7 +790,7 @@ signatures:
 
   - callee: BUILTIN_RUNTIME
     method_name: failedTypeCastException
-    params: [BUILTIN_OBJECT, BUILTIN_STRING]
+    params: [BUILTIN_OBJECT, BUILTIN_STRING, PRIMITIVE_BOOLEAN]
     return_type: BUILTIN_CLASS_CAST_ERROR
     ref: BUILTIN_RUNTIME_FAILED_TYPE_CAST_EXCEPTION
 
