--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -49,6 +49,7 @@
     "coverage-report": "node scripts/testRunner/coverage_report.js"
   },
   "dependencies": {
+    "cli-progress": "^3.12.0",
     "commander": "^9.4.0",
     "fs-extra": "11.2.0",
     "homecheck": "file:./homecheck",
