Error when accessing prototype field
This feature is not in the spec and is explicitly listed as not
supported by the cookbook.  Add an error when code tries to assign or
read from it.

Fixes #23743 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICJA0M

Testing: ast, astchecker, parser

Change-Id: I87f4d5466c748c090f827bfd53b9e302b5dc889b
Signed-off-by: Peter Pronai <peter.pronai@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -941,6 +941,10 @@ syntax:
   id: 238
   message: "Methods or fields should not be decorated with {} in ambient class."
 
+- name: PROTOTYPE_ACCESS
+  id: 30818
+  message: "Runtime prototype assignment is not supported because of static typing"
+
 - name: QUANTIFIER_OUT_OF_ORDER
   id: 78
   message: "Quantifier range out of order."
