Fix assignment with setter
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICJ9XL
Internal issue: #26801

Setter calls discard the accumulator value,
thus the assignment expression's return value
(that is the value of rhs) can't be reused.
The patch fixes this by saving & reloading
this value after the setter call.

Test: build, runtime tests

Change-Id: Ib84f28d3e04f6dd6542c19d3dd71cd8129f8cba9
Signed-off-by: Martin Sajti <martin.sajti@h-lab.eu>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -252,6 +252,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/restArgsLowering.cpp",
   "compiler/lowering/ets/restTupleLowering.cpp",
   "compiler/lowering/ets/setJumpTarget.cpp",
+  "compiler/lowering/ets/setterLowering.cpp",
   "compiler/lowering/ets/spreadLowering.cpp",
   "compiler/lowering/ets/stringComparison.cpp",
   "compiler/lowering/ets/stringConstantsLowering.cpp",
