--- a/ets2panda/util/diagnostic/warning.yaml
+++ b/ets2panda/util/diagnostic/warning.yaml
@@ -29,6 +29,10 @@ warning:
   id: 12
   message: "Detect duplicate signatures, use '{}{}' to replace"
 
+- name: ENUM_DEPRECATED_CAST
+  id: 30
+  message: "Enum cast is deprecated. Cast support from '{}' to '{}' will be removed."
+
 - name: EXTENSION_MISMATCH
   id: 25
   message: "Not matching extensions! Sourcefile: {}, Manual(used): {}"
