log syntaxerror for default value in declare
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICK7TT?from=project-issue
Signed-off-by: ekkoruse <zhangqingchun2@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1195,3 +1195,7 @@ syntax:
 - name: DEEP_NESTING
   id: 306
   message: "Maximum allowed nesting level exceeded."
+
+- name: DEFAULT_PARAM_IN_DECLARE
+  id: 382
+  message: "A parameter initializer is only allowed in a function or constructor implementation."
