Fix nullptr in async function expression
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICKB2I
Testing: all CI tests passed. Results are availible in gg watcher.
Signed-off-by: Akmaev Aleksey <akmaev.aleksey@huawei.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -1231,3 +1231,7 @@ syntax:
 - name: DEEP_NESTING
   id: 305
   message: "Maximum allowed nesting level exceeded."
+
+- name: FUNC_EXPR
+  id: 306
+  message: "Function expressions are not supported, use arrow functions instead"
