--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -114,7 +114,8 @@
     "arkui-no-setandprop-function",
     "arkui-prop-need-call-method-for-deep-copy",
     "arkui-no-localbuilder-decorator",
-    "arkui-statestyles-block-need-arrow-func"
+    "arkui-statestyles-block-need-arrow-func",
+    "arkui-repeat-disable-default-virtualscroll"
   ],
   "builtin": [
     "arkts-builtin-thisArgs",
