[LSPAPI] CodeFix_ReturnTypeAsyncFunction_promise
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICKLUU
Signed-off-by: doneyildiz <done.yildiz@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -112,6 +112,7 @@ set(ES2PANDA_LSP_SRC
   ./src/code_fix_provider.cpp
   ./src/register_code_fix/fix_class_doesnt_implement_inherited_abstract_member.cpp
   ./src/register_code_fix/fix_expected_comma.cpp
+  ./src/register_code_fix/fix_return_type_in_async_function.cpp
   ./src/register_code_fix/add_missing_declare_property.cpp
   ./src/register_code_fix/convert_const_to_let.cpp
   ./src/register_code_fix/fix_missing_call_parantheses.cpp
