--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -87,6 +87,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/register_code_fix/fix_nan_equality.cpp",
     "src/register_code_fix/forgetten_this_property_access.cpp",
     "src/register_code_fix/import_fixes.cpp",
+    "src/register_code_fix/remove_accidental_call_parentheses.cpp",
     "src/rename.cpp",
     "src/register_code_fix/ui_plugin_suggest.cpp",
     "src/script_element_kind.cpp",
