Fix annotation dot empty crash
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICL01K
Description: Fix annotation dot empty crash

Signed-off-by: zmw <zhongmingwei2@huawei.com>
Change-Id: I7896637942b5a45396c0b93e8a64e72676889fa0

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -456,6 +456,10 @@ syntax:
   id: 111
   message: "Export declarations are not permitted in a namespace."
 
+- name: INVALID_ANNOTATION_NAME
+  id: 329
+  message: "Invalid annotation name."
+
 - name: UNEXPECTED_TOKEN_ID
   id: 112
   message: "Unexpected token, expected an identifier."
