ix annotation dot empty crash
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICL01K
Description: Fix annotation dot empty crash

Signed-off-by: zmw <zhongmingwei2@huawei.com>
Change-Id: I7896637942b5a45396c0b93e8a64e72676889fa0

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -505,6 +505,10 @@ syntax:
   id: 159
   message: "Invalid accessor."
 
+- name: INVALID_ANNOTATION_NAME
+  id: 329
+  message: "Invalid annotation name."
+
 - name: INVALID_ARGUMENT_ETSNOLINT
   id: 278
   message: "Invalid argument for ETSNOLINT!"
