--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -115,7 +115,8 @@
     "arkui-prop-need-call-method-for-deep-copy",
     "arkui-no-localbuilder-decorator",
     "arkui-statestyles-block-need-arrow-func",
-    "arkui-repeat-disable-default-virtualscroll"
+    "arkui-repeat-disable-default-virtualscroll",
+    "arkui-wrapbuilder-require-arrow-func-generic"
   ],
   "builtin": [
     "arkts-builtin-thisArgs",
