--- a/ets2panda/driver/build_system/package.json
+++ b/ets2panda/driver/build_system/package.json
@@ -42,6 +42,8 @@
 
     "demo_hap:gen_abc": "npm run build && node ./dist/entry.js test/demo_hap/build_config.json",
 
+    "interop_sdk": "npm run build && node ./dist/entry.js test/e2e/demo_interop_sdk/build_config.json",
+
     "ut_test": "jest test/ut",
     "plugin_test": "jest --testMatch='<rootDir>/test/plugin/**/*.test.ts'",
     "build_system_Utest": "jest --testMatch='**/test/ut/**/*.test.ts' --testPathIgnorePatterns='test/e2e/'",
