--- a/merge_abc/BUILD.gn
+++ b/merge_abc/BUILD.gn
@@ -12,7 +12,12 @@
 # limitations under the License.
 
 import("//arkcompiler/ets_frontend/ets_frontend_config.gni")
-import("//arkcompiler/runtime_core/ark_config.gni")
+
+if (defined(ark_standalone_build) && ark_standalone_build) {
+  import("//arkcompiler/runtime_core/ark_config.gni")
+} else {
+  import("//arkcompiler/ets_frontend/ark_config.gni")
+}
 
 THIRDPARTY_PROTOBUF_SUBSYS_NAME = "thirdparty"
 THIRDPARTY_PROTOBUF_PART_NAME = "protobuf"
@@ -51,12 +56,24 @@ config("panda_assembly_proto_public_config") {
   ]
 }
 
-assembly_proto_configs = [
-  "$ark_root:ark_config",
+if (defined(ark_standalone_build) && ark_standalone_build) {
+  assembly_proto_configs = [ "$ark_root:ark_config" ]
+} else {
+  assembly_proto_configs = [
+    "//arkcompiler/ets_frontend:ark_config"
+  ]
+}
+
+if (ark_standalone_build) {
+  assembly_proto_configs += [
+    "$ark_root/assembler:arkassembler_public_config",
+    "$ark_root/libpandafile:arkfile_public_config",
+    "$ark_root/libpandabase:arkbase_public_config",
+  ]
+}
+
+assembly_proto_configs += [
   ":panda_assembly_proto_public_config",
-  "$ark_root/assembler:arkassembler_public_config",
-  "$ark_root/libpandabase:arkbase_public_config",
-  "$ark_root/libpandafile:arkfile_public_config",
 ]
 
 if (defined(is_arkui_x) && is_arkui_x) {
@@ -173,6 +190,14 @@ ohos_source_set("assembly_proto_static") {
     ]
   }
 
+  if (!ark_standalone_build) {
+    external_deps += [
+      "runtime_core:arkassembler_public_headers",
+      "runtime_core:arkbase_public_headers",
+      "runtime_core:arkfile_public_headers",
+    ]
+  }
+
   if (defined(ohos_indep_compiler_enable) && ohos_indep_compiler_enable) {
     external_deps += [
       "abseil-cpp:absl_base_static",
@@ -218,12 +243,22 @@ ohos_executable("merge_abc") {
 
   include_dirs = [ "./src" ]
 
-  configs = [
-    "$ark_root:ark_config",
+  if (defined(ark_standalone_build) && ark_standalone_build) {
+    configs = [ "$ark_root:ark_config" ]
+  } else {
+    configs = [ "//arkcompiler/ets_frontend:ark_config" ]
+  }
+
+  if (ark_standalone_build) {
+    configs += [
+      "$ark_root/assembler:arkassembler_public_config",
+      "$ark_root/libpandafile:arkfile_public_config",
+      "$ark_root/libpandabase:arkbase_public_config",
+    ]
+  }
+
+  configs += [
     ":panda_assembly_proto_public_config",
-    "$ark_root/assembler:arkassembler_public_config",
-    "$ark_root/libpandabase:arkbase_public_config",
-    "$ark_root/libpandafile:arkfile_public_config",
     ":proto_file_cpp_config",
   ]
 
@@ -246,6 +281,15 @@ ohos_executable("merge_abc") {
       "protobuf:protobuf_static",
     ]
   }
+
+  if (!ark_standalone_build) {
+    external_deps += [
+      "runtime_core:arkassembler_public_headers",
+      "runtime_core:arkbase_public_headers",
+      "runtime_core:arkfile_public_headers",
+    ]
+  }
+
   ldflags = []
   if (is_linux) {
     if (build_public_version) {
