Add diagnostic for for-in loop
Fixes #23686 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICLIJR

Change-Id: If24fa5e45928a679fd2d718e4c4d602fc1e80441
Signed-off-by: Gabor Aron Takacs <gabor.takacs@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -213,6 +213,11 @@ syntax:
   id: 307
   message: "'export = ...' syntax is not supported, use regular import/export instead!"
 
+- name: ERROR_ARKTS_NO_FOR_IN_LOOP
+  id: 6987
+  message: "'for ... in' loop is not supported, please use regular 'for' or 'for ... of ...' loop to iterate through arrays
+    and iterable objects."
+
 - name: ERROR_ARKTS_NO_IMPORT_ASSERTIONS
   id: 313
   message: "Import assertion is not supported, please use the ordinary import syntax instead!"
